--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "5.0.0",
     "bootstrap": "^4.4.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
