feat: added firebase hosting, connecting to DO

--- a/angular.json
+++ b/angular.json
@@ -127,6 +127,10 @@
               "devServerTarget": "milabaumann:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
