--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
+    "@angular/fire": "^6.1.2",
     "@angular/forms": "~9.1.9",
     "@angular/localize": "^9.1.9",
     "@angular/material": "9.1.3",
@@ -29,7 +30,8 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "firebase": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
@@ -49,7 +51,13 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   },
   "resolutions": {
     "**/**/braces": "^3.0.0",
